# project-liminal-gate

./: .gitignore  COMPATIBILITY_SCOPE.md  CONTRIBUTING.md  NOTICE.md  PARITY_ROADMAP.md  README.md  pyproject.toml
docs/: advanced-configuration.md  developer-reference.md
liminal_gate/: __init__.py  achievement_catalog.py  apk_patcher.py  apk_signer.py  battledata_importer.py  bootstrap_profile_importer.py  bootstrap_server.py  character_catalog_importer.py  clear_state_catalog.py  companion_catalog.py  companion_draw_catalog.py  companion_evolution_catalog.py  companion_strengthen_catalog.py  data_manifest.py  event_catalog.py  event_character_catalog.py  exchange_catalog.py  il2cpp_plan_generator.py  input_importer.py  job_catalog.py  legacy_client_apk_plan.py  message_catalog.py  pact_banner_importer.py  pact_draw_catalog.py  rebirth_catalog.py  release_audit.py  release_preflight.py  resource_catalog.py  resource_catalog_builder.py  server.py  server_config.py  settlement_catalog.py  statusup_catalog.py  story_catalog.py  story_catalog_normalizer.py  story_outcome_catalog.py  story_progression_catalog.py  story_progression_importer.py  summon_skill_catalog.py  tester_setup.py
profiles/: legacy-client-bootstrap.json
tests/: __init__.py  test_achievement_claim.py  test_add_job.py  test_apk_patcher.py  test_apk_signer.py  test_battledata_importer.py  test_bootstrap_profile_importer.py  test_bootstrap_server.py  test_change_uname.py  test_character_catalog_importer.py  test_clear_state_catalog.py  test_companion_catalog.py  test_companion_draw.py  test_exchange.py  (+41 more)
(+1 files in other folders)
